# personal-finance

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =4.2  API_DOCUMENTATION.md  BACKTESTING_USAGE.md  CONTRIBUTORS.txt  DATA_PROFILER_USAGE.md  DEPENDENCY_MANAGEMENT.md  Dockerfile  ENHANCED_DATA_ANALYSIS.md  ENHANCED_FEATURES_SUMMARY.md  FINANCE_IMPLEMENTATION.md  GUI_README.md  LICENSE  Procfile  README.md  REALTIME_USAGE.md  RENDER.md  TAX_USAGE.md  VISUALIZATION_USAGE.md  alembic.ini  constraints.txt  demonstrate_solution.py  docker-compose.docs.yml  docker-compose.production.yml  docker-compose.yml  launch_docker.sh  manage.py  personal_finance_app.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_docker.sh  run_finance.py  setup_database.py  start_debug.sh  test_data_profiler_implementation.py  (+3 more)
.devcontainer/: Dockerfile  README-devcontainer.md  devcontainer.json  docker-compose.yml  postCreateCommand.sh  wait-for-postgres.sh
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/: copilot-instructions.md
.github/workflows/: aquilax_security_scan.yml  ci-python.yml  ci.yml  codeql.yml  deploy-render.yml
.venv311/: pyvenv.cfg
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_add_constraints_indexes.py
config/: __init__.py  api_router.py  asgi.py  celery_app.py  urls.py  websocket.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
django/: .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
django/.devcontainer/: devcontainer.json
django/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
django/django/: conftest.py
django/docs/: conf.py  howto.rst  make.bat
django/requirements/: production.txt
docker/: entrypoint.sh
docs/: conf.py  users.rst
examples/: data_profiler_usage.py
ludic/: README.md  pyproject.toml
ludic/src/: pages.py
notebooks/: dash.ipynb  earnings.ipynb  portfolio.ipynb  stockdex.ipynb  yfinance.ipynb
personal_finance/: docker-compose.local.yml  manage.py  pyproject.toml
personal_finance/analytics/: apps.py  services.py
personal_finance/assets/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
personal_finance/backtesting/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py
personal_finance/config/: api_router.py
personal_finance/data_profiler/: __init__.py  apps.py  services.py  validators.py
personal_finance/data_sources/: advanced_analytics.py  apps.py  data_cleaning.py  data_profiling.py  enhanced_visualization.py  polars_integration.py  services.py
personal_finance/docs/: howto.rst  index.rst  make.bat
personal_finance/personal_finance/: conftest.py
personal_finance/portfolios/: admin.py  apps.py  models.py  serializers.py
personal_finance/realtime/: __init__.py  api.py  connections.py  routing.py  services.py  urls.py  views.py
personal_finance/requirements/: production.txt
personal_finance/tax/: __init__.py  admin.py  apps.py  models.py  report_service.py  serializers.py  services.py  urls.py  views.py
personal_finance/templates/: base.html
personal_finance/users/: apps.py  views.py
personal_finance/visualization/: __init__.py  apps.py  charts.py  urls.py  views.py
personalfinance/: .coveragerc  .dockerignore  Dockerfile  README.md  setup.cfg
personalfinance/personalfinance/: __main__.py
personalfinance/test/: test_personalfinance.py
prompts/: personal-finance.md
requirements/: base.txt  local.txt  production.txt
robust_python/: .cookiecutter.json  .coveragerc  .cz.toml  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
robust_python/.github/workflows/: lint-rust.yml  test-rust.yml
robust_python/docs/: conf.py  contributing.md  index.md  reference.md  usage.md
robust_python/rust/: Cargo.toml
robust_python/rust/src/: lib.rs
robust_python/scripts/: bump-version.py  get-release-notes.py  setup-git.py  setup-release.py  setup-remote.py  util.py
robust_python/src/robust_python/: __init__.py  __main__.py
robust_python/tests/: __init__.py
robust_python/tests/acceptance_tests/: __init__.py
robust_python/tests/integration_tests/: __init__.py
robust_python/tests/unit_tests/: __init__.py  test_main.py
src/personal_finance/: __init__.py  _stockdex.py  database.py  dependencies.py  dependency_config.py  desktop_gui.py  from unittest.py  gui_service.py  performance.py  portfolio.py  stockdex.py  web_gui.py  yahoo_finance.py
src/personal_finance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  README_SIMPLIFIED.md  conftest.py  run_expanded_test_demo.py.disabled  run_test_suite.py.disabled  test_api_integration.py.disabled  test_asset_endpoints.py  test_assets_factories_and_views.py  test_assets_files.py.disabled  test_assets_models_integration.py  test_assets_views.py  test_basic_functionality.py  test_basic_functionality.py.disabled  test_basic_functionality_simple.py  test_basic_functionality_simple.py.disabled  test_comprehensive_platform.py  test_comprehensive_platform.py.disabled  test_config_utilities.py  test_config_utilities.py.disabled  test_data_profiler_service.py  test_data_profiler_validation.py  test_database_setup.py  test_dependency_management.py  test_enhanced_data_analysis.py  test_enhanced_features.py  test_financial_calculations.py  test_holdings_api_and_models.py  test_integration_mocking.py.disabled  test_minimal_core.py  test_performance_benchmarks.py.disabled  test_portfolio.py  test_portfolio_api.py  test_regression_suite.py  test_security_edge_cases.py  test_suite_comprehensive.py.disabled  test_tax_compliance.py
uv/: CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
uv/.devcontainer/: devcontainer.json
uv/docs/: index.md  modules.md
uv/tests/: test_foo.py
wolt_best_practices/: .cruft.json  LICENSE  README.md  mkdocs.yml  pyproject.toml
(+118 files in other folders)
