[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-finance"
version = "0.1.0"
description = "A personal finance management tool"
readme = "README.md"
authors = [
    {name = "Mauricio Silva", email = "maugx3@gmail.com"}
]
license = "CC0-1.0"
keywords = ["finance", "personal finance", "investment", "stocks", "bonds", "etfs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "django>=4.2.0",
    "django-environ>=0.12.0",
    "pandas",
    "matplotlib",
    "numpy",
    "seaborn",
    "yfinance",
    "stockdex",
    "requests",
    "beautifulsoup4",
    "yahoofinancials",
    "alpha_vantage",
    "plotly",
    "dash",
    "pandas-datareader",
    "fredapi",
    "quantstats",
    "scikit-learn",
    "statsmodels",
    "psycopg2-binary",
    "sqlalchemy",
    "alembic",
    "pymongo",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "ruff>=0.12.11",
    "alembic>=1.10"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["personal_finance"]


[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
extend-select = []
