[project]
name = "robust_python"
version = "0.1"
description = "robust_python"
authors = [
    { name = "maugx3", email = "maugx3@gmail.com" },
]
license = "MIT"
license-files.paths = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = [
    "robust-python",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "loguru>=0.7.3",
    "platformdirs>=4.3.8",
    "typer>=0.15.4",
    "typing-extensions>=4.13.2"
]

[dependency-groups]
dev = [
    "commitizen>=4.7.0",
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.11.9",
    "bandit>=1.8.3",
    "pip-audit>=2.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pyright>=1.1.400",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-typer>=0.5.1",
]

[project.urls]
Homepage = "https://github.com/maugx3/personal_finance"
Repository = "https://github.com/maugx3/personal_finance"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["maturin>=1.3.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
rust-src = "rust"
